--- a/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.LuckyPets"
-        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <!-- SplashScreen como actividad inicial -->
         <activity
@@ -91,6 +91,11 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.AddCardActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.PostActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
