--- a/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
@@ -99,6 +99,11 @@
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.NewPostActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
