--- a/AppMovil/LuckyPets3/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets3/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <!-- Permisos para internet y estado de la red -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -96,6 +97,11 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.PostActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.NewPostActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
