Implementado menu mis anuncios y mis reservas
Implementado menu mis anuncios y mis reservas, y varias mejoras visuales

--- a/AppMovil/LuckyPets2/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets2/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     <!-- Permisos para internet y estado de la red -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LuckyPets"
         tools:targetApi="31">
-        <!-- SplashScreen como actividad inicial -->
+         <!-- SplashScreen como actividad inicial -->
         <activity
             android:name=".SplashScreen"
             android:exported="true"
@@ -103,6 +103,21 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.NewPostActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.HelpActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.MyReservationsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.MyPostActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
