--- a/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LuckyPets"
         tools:targetApi="31">
-        <!-- SplashScreen como actividad inicial -->
+         <!-- SplashScreen como actividad inicial -->
         <activity
             android:name=".SplashScreen"
             android:exported="true"
@@ -108,6 +108,16 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.HelpActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.MyReservationsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.MyPostActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
