--- a/AppMovil/LuckyPets3/app/src/main/AndroidManifest.xml
+++ b/AppMovil/LuckyPets3/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LuckyPets"
         tools:targetApi="31">
-         <!-- SplashScreen como actividad inicial -->
+
+        <!-- SplashScreen como actividad inicial -->
         <activity
             android:name=".SplashScreen"
             android:exported="true"
@@ -118,6 +119,11 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.MyPostActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.TransactionActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="adjustPan" />
