(Desktop) Implementado busqueda avanzada y limpiar datos de busqueda
(Desktop) Implementado busqueda avanzada y limpiar datos de busqueda. Immplementadas varias mejoras de interfaz con mensajes de ayuda e imagenes

--- a/AppEscritorio/LuckyPets/LuckyPets.csproj
+++ b/AppEscritorio/LuckyPets/LuckyPets.csproj
@@ -191,6 +191,12 @@
     <Compile Include="AcercaDe.Designer.cs">
       <DependentUpon>AcercaDe.cs</DependentUpon>
     </Compile>
+    <Compile Include="Buscar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Buscar.Designer.cs">
+      <DependentUpon>Buscar.cs</DependentUpon>
+    </Compile>
     <Compile Include="CodigoRest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -226,6 +232,9 @@
     <Compile Include="Settings.cs" />
     <EmbeddedResource Include="AcercaDe.resx">
       <DependentUpon>AcercaDe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Buscar.resx">
+      <DependentUpon>Buscar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CodigoRest.resx">
       <DependentUpon>CodigoRest.cs</DependentUpon>
