--- a/AppEscritorio/LuckyPets/LuckyPets.csproj
+++ b/AppEscritorio/LuckyPets/LuckyPets.csproj
@@ -197,23 +197,11 @@
     <Compile Include="AddCard.Designer.cs">
       <DependentUpon>AddCard.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddEvaluation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddEvaluation.Designer.cs">
-      <DependentUpon>AddEvaluation.cs</DependentUpon>
-    </Compile>
     <Compile Include="AddPost.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AddPost.Designer.cs">
       <DependentUpon>AddPost.cs</DependentUpon>
-    </Compile>
-    <Compile Include="AddTransactionHistory.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddTransactionHistory.Designer.cs">
-      <DependentUpon>AddTransactionHistory.cs</DependentUpon>
     </Compile>
     <Compile Include="AddUser.cs">
       <SubType>Form</SubType>
@@ -265,6 +253,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddCard.resx">
       <DependentUpon>AddCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddPost.resx">
+      <DependentUpon>AddPost.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AddUser.resx">
       <DependentUpon>AddUser.cs</DependentUpon>
